# github-diy-mentor

./: .env.example  .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt
app/: main.py  models.py
app/services/: analyst.py  cache.py  exporter.py  github_scout.py  mentor.py  translation.py
app/static/: index.html
app/static/js/: api.js  app.js  i18n.js  toast.js
scripts/: scout_github_trending.py
tests/: test_analyst.py  test_cache.py  test_mentor_prompt.py  test_scout.py
